--- a/powerapp.css
+++ b/powerapp.css
@@ -40,6 +40,7 @@ main{
 #comparison>figure>img {
     max-width: 600px;
     max-height: 500px;
+    width: 100%;
 }
 figure{
     margin: 0;
